--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#" class="logo"></div>
             <img src="./imagenes/logo.jpg" alt="logo de la página" height="50px">
             <h2 class="nombre-web">Educar</h2>
-        
+            <h3>Sólo se que no se nada...</h3>
        </header> 
        <nav>
         <a href="" class="nav-link">Inicio</a>
