--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <img src="./imagenes/logo.jpg" alt="logo de la página" height="50px">
             <h2 class="nombre-web">Educar</h2>
             <h3>Sólo se que no se nada...</h3>
+            <h4>cambio</h4>
        </header> 
        <nav>
         <a href="" class="nav-link">Inicio</a>
