--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 class="nombre-web">Educar</h2>
             <h3>Sólo se que no se nada...</h3>
             <h4>cambio</h4>
-            <small>Ahí va un cambio</small>
+            <small>Segunda vez que no se nada</small>
        </header> 
        <nav>
         <a href="" class="nav-link">Inicio</a>
