cambio en menú sin decoración

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Instituto UNT</title>
+        <title>Educar</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -42,7 +42,7 @@
         <a href="" class="nav-link">Inicio</a>
         <a href="" class="nav-link">Recursos</a>
         <a href="" class="nav-link">Técticas de estudio</a>
-        <a href="" class="nav-link">Contacto</a>
+        <a href="" class="nav-link">Biblioteca</a>
         </nav>  
        <main>
         <section>
