Agregue formularios y enlaces en el menú

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
        </header> 
        <nav>
         <a href="" class="nav-link">Inicio</a>
-        <a href="" class="nav-link">Recursos</a>
-        <a href="" class="nav-link">Técticas de estudio</a>
-        <a href="" class="nav-link">Biblioteca</a>
+        <a href="https://www.educaweb.com/contenidos/educativos/tecnicas-estudio/estudiar-ayuda-nuevas-tecnologias/" class="nav-link">Recursos</a>
+        <a href="https://www.educaweb.com/contenidos/educativos/tecnicas-estudio/descubre-algunas-formas-estudiar-mas-eficaces/" class="nav-link">Técticas de estudio</a>
+        <a href="https://www.cultura.gob.ar/institucional/organismos/museos/biblioteca-nacional/" class="nav-link">Biblioteca</a>
         </nav>  
        <main>
         <section>
@@ -50,6 +50,17 @@
 
             </article>
        </section>
+       <section id="seccion">
+            <h1>Formulario:</h1>
+            <form action="">
+                <label for="nombre-contacto">Nombre</label>
+                <input type="text" id="nombre-contacto" name="nombre">
+                <label for="email-contacto">Email</label>
+                <input type="email" id="email-contacto" name="email">
+                <label for="consulta-contacto">¿Cuál es tu consulta?</label>
+                <textarea name="" id="consulta-contacto" cols="30" rows="10"></textarea>
+            </form>
+        </section>
        </main>
        <br>
        <br>
