--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
             <a href="a" class="telegram">
                 <i class="fa-brands fa-telegram"></i>
             </a>
+            <br>
+            <p>Copyright©2000-2023 Dajevima,todos los derechos reservados</p>
         </div>
+    
        </footer> 
         <script src="" async defer></script>
     </body>
