--- a/index.html
+++ b/index.html
@@ -40,27 +40,37 @@
        </header> 
        <nav>
         <a href="" class="nav-link">Inicio</a>
-        <a href="https://www.educaweb.com/contenidos/educativos/tecnicas-estudio/estudiar-ayuda-nuevas-tecnologias/" class="nav-link">Recursos</a>
-        <a href="https://www.educaweb.com/contenidos/educativos/tecnicas-estudio/descubre-algunas-formas-estudiar-mas-eficaces/" class="nav-link">Técticas de estudio</a>
-        <a href="https://www.cultura.gob.ar/institucional/organismos/museos/biblioteca-nacional/" class="nav-link">Biblioteca</a>
+        <a href="" class="nav-link">Recursos</a>
+        <a href="" class="nav-link">Técticas de estudio</a>
+        <a href="" class="nav-link">Biblioteca</a>
         </nav>  
        <main>
         <section>
             <article>
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7fk4FY4JBDLSjrlaC5RvK89s9XTWZhJydXg&usqp=CAU" class="d-block w-100" alt="banner 1">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKCRBxenVTqs11MQsiEHYl3mNoOc81Df3WQg&usqp=CAU" class="d-block w-100" alt="banner 2">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="https://cdn.pixabay.com/photo/2016/11/29/02/56/blonde-1866951_1280.jpg" class="d-block w-100" alt="banner 3">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
 
             </article>
        </section>
-       <section id="seccion">
-            <h1>Formulario:</h1>
-            <form action="">
-                <label for="nombre-contacto">Nombre</label>
-                <input type="text" id="nombre-contacto" name="nombre">
-                <label for="email-contacto">Email</label>
-                <input type="email" id="email-contacto" name="email">
-                <label for="consulta-contacto">¿Cuál es tu consulta?</label>
-                <textarea name="" id="consulta-contacto" cols="30" rows="10"></textarea>
-            </form>
-        </section>
        </main>
        <br>
        <br>
@@ -83,10 +93,7 @@
             <a href="a" class="telegram">
                 <i class="fa-brands fa-telegram"></i>
             </a>
-            <br>
-            <p>Copyright©2000-2023 Dajevima,todos los derechos reservados</p>
         </div>
-    
        </footer> 
         <script src="" async defer></script>
     </body>
