cambio de imagenes en el principal

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
        <main>
         <section>
             <article>
-
+                <p>Somos una organización que nos dedicamos a ofrecer material didactico, tecnicas de estudio, difirentes enclaces a bibliotecas, con la finalidad de ofrecer tanto a alumnos, docente o personal capacitado para enseñar, herramientas que faciliten el aprendizaje.</p>
+            </article>
+            <article>
+                <img src="./imagenes/educar1.jpg" alt="Educar">
             </article>
        </section>
        <section id="seccion">
