--- a/index.html
+++ b/index.html
@@ -33,21 +33,19 @@
         <img id="logo" src="imagenes/LOGO.png" alt="EDUCAR">
         <a href="a" class="home">
             <i class="fa-solid fa-house"></i>
-            
-
         </a>
         </div>             
        </header> 
        <nav>
         <a href="" class="nav-link">Inicio</a>
-        <a href="" class="nav-link">Recursos</a>
-        <a href="" class="nav-link">Técticas de estudio</a>
-        <a href="" class="nav-link">Biblioteca</a>
+        <a href="https://www.educaweb.com/contenidos/educativos/tecnicas-estudio/estudiar-ayuda-nuevas-tecnologias/" class="nav-link">Recursos</a>
+        <a href="https://www.educaweb.com/contenidos/educativos/tecnicas-estudio/descubre-algunas-formas-estudiar-mas-eficaces/" class="nav-link">Técticas de estudio</a>
+        <a href="https://www.cultura.gob.ar/institucional/organismos/museos/biblioteca-nacional/" class="nav-link">Biblioteca</a>
         </nav>  
        <main>
         <section>
             <article>
-
+                <P>Somos una organizacion sin fines de lucro, nos dedicamos a ofrecer ayuda al docente, alumnos, y personadas dedicadas a la enseñanza. En este sitio vas a poder encontrar diferentes recursos, tecnicas de estudio, bibliotecas virtuales. ¡¡¡SUMATE A NUESTRA PROPUESTA!!!</P>
             </article>
        </section>
        </main>
