--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
        </header> 
        <nav>
         <a href="" class="nav-link">Inicio</a>
-        
+        <a  href =" https://www.educaweb.com/contenidos/educativos/tecnicas-estudio/estudiar-ayuda-nuevas-tecnologias/ " class =" nav-link " > Recursos </a >
+        <a  href =" https://www.educaweb.com/contenidos/educativos/tecnicas-estudio/descubre-algunas-formas-estudiar-mas-eficaces/ " class =" nav-link " > Técticas de estudio </a >
+        <a  href =" https://www.cultura.gob.ar/institucional/organismos/museos/biblioteca-nacional/ " class =" nav-link " > Biblioteca </a >
         </nav>  
        <main>
         <section>
